# ROS2_Prac

./: .gitignore  README.en.md  README.md
.github/workflows/: ci.yml
docs/: 01_ros2_amr_learning_guide.md  02_amr_system_architecture.md  03_implementation_roadmap.md  04_reference_links.md  05_code_walkthrough.md  06_build_and_development_guide.md  07_fae_field_guide.md  08_gazebo_simulation_guide.md  09_qt_operator_ui_guide.md  10_vision_docking_guide.md  11_dev_environment_setup.md
docs/en/: 01_ros2_amr_learning_guide.en.md  02_amr_system_architecture.en.md  03_implementation_roadmap.en.md  04_reference_links.en.md  05_code_walkthrough.en.md  06_build_and_development_guide.en.md  07_fae_field_guide.en.md  08_gazebo_simulation_guide.en.md  09_qt_operator_ui_guide.en.md  10_vision_docking_guide.en.md
src/amr_base_controller/: CMakeLists.txt  package.xml
src/amr_base_controller/include/amr_base_controller/: diff_drive_kinematics.hpp
src/amr_base_controller/src/: diff_drive_base_controller_node.cpp
src/amr_base_controller/test/: test_diff_drive_kinematics.cpp
src/amr_battery_driver/: CMakeLists.txt  package.xml
src/amr_battery_driver/src/: mock_battery_driver_node.cpp
src/amr_bringup/: CMakeLists.txt  package.xml
src/amr_bringup/config/: mock_robot.yaml
src/amr_bringup/launch/: display.launch.py  full_system.launch.py  mission_demo.launch.py  mock_robot.launch.py
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/models/amr_demo_robot/: model.config  model.sdf
src/amr_description/rviz/: amr_gazebo.rviz
src/amr_description/urdf/: amr_demo_robot.urdf.xacro
src/amr_docking/: package.xml  setup.cfg  setup.py
src/amr_docking/amr_docking/: docking_controller.py  docking_controller_node.py
src/amr_docking/config/: docking_controller.yaml
src/amr_docking/launch/: dock_closed_loop.launch.py  dock_demo.launch.py  docking_controller.launch.py
src/amr_docking/test/: test_closed_loop_sim.py  test_docking_controller.py
src/amr_interfaces/: CMakeLists.txt  package.xml
src/amr_interfaces/msg/: DockingState.msg  IoState.msg  MotorState.msg  RobotState.msg  SafetyState.msg  WheelCommand.msg
src/amr_interfaces/srv/: InjectMotorFault.srv  SetBatteryPercentage.srv  SetDigitalInput.srv  SetMode.srv
src/amr_io_driver/: CMakeLists.txt  package.xml
src/amr_io_driver/src/: mock_io_driver_node.cpp
src/amr_lidar_driver/: package.xml  setup.cfg  setup.py
src/amr_lidar_driver/amr_lidar_driver/: mock_lidar_driver_node.py  scan_model.py
src/amr_lidar_driver/launch/: mock_lidar.launch.py
src/amr_lidar_driver/test/: test_scan_model.py
src/amr_mission/: package.xml  setup.py
src/amr_mission/amr_mission/: mission_coordinator.py  mission_coordinator_node.py
src/amr_mission/config/: mission.yaml
src/amr_mission/launch/: mission_coordinator.launch.py
src/amr_mission/test/: test_mission_coordinator.py
src/amr_motor_driver/: CMakeLists.txt  package.xml
src/amr_motor_driver/src/: mock_motor_driver_node.cpp
src/amr_navigation/: package.xml  setup.py
src/amr_navigation/amr_navigation/: waypoint_follower.py  waypoint_follower_node.py
src/amr_navigation/config/: waypoint_follower.yaml
src/amr_navigation/launch/: waypoint_demo.launch.py  waypoint_follower.launch.py
src/amr_navigation/test/: test_waypoint_follower.py
src/amr_operator_ui/: CMakeLists.txt  package.xml
src/amr_operator_ui/include/amr_operator_ui/: main_window.hpp  robot_scene_widget.hpp  robot_state_cache.hpp  ros_worker.hpp
src/amr_operator_ui/launch/: operator_ui.launch.py
src/amr_operator_ui/src/: main.cpp  main_window.cpp  robot_scene_widget.cpp  ros_worker.cpp
src/amr_safety_monitor/: CMakeLists.txt  package.xml
src/amr_safety_monitor/include/amr_safety_monitor/: safety_decision.hpp
src/amr_safety_monitor/src/: safety_monitor_node.cpp
src/amr_safety_monitor/test/: test_safety_decision.cpp
src/amr_sim/: CMakeLists.txt  package.xml
src/amr_sim/config/: gazebo_bridge.yaml  gazebo_robot.yaml
src/amr_sim/launch/: gazebo_amr.launch.py
src/amr_sim/worlds/: amr_warehouse.sdf
src/amr_system_manager/: CMakeLists.txt  package.xml
src/amr_system_manager/src/: system_manager_node.cpp
src/amr_tools/: package.xml  setup.cfg  setup.py
src/amr_tools/amr_tools/: __init__.py  fault_scenario.py  health_report.py  report_model.py
src/amr_tools/test/: test_imports.py  test_report_model.py
src/amr_twist_mux/: package.xml  setup.cfg  setup.py
src/amr_twist_mux/amr_twist_mux/: twist_mux.py  twist_mux_node.py
src/amr_twist_mux/config/: twist_mux.yaml
src/amr_twist_mux/launch/: twist_mux.launch.py
src/amr_twist_mux/test/: test_twist_mux.py
src/amr_vision/: package.xml  setup.py
src/amr_vision/amr_vision/: aruco_compat.py  aruco_docking_node.py  marker_docking.py  mock_dock_camera_node.py
src/amr_vision/config/: docking.yaml
src/amr_vision/launch/: docking_vision.launch.py
src/amr_vision/test/: test_aruco_compat.py  test_marker_docking.py  test_world_geometry.py
