<?xml version="1.0"?>
<package format="3">
  <name>amr_docking</name>
  <version>0.1.0</version>
  <description>Docking behaviour controller for the ROS2_Prac AMR stack.</description>
  <maintainer email="bong7233@example.com">bong7233</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>amr_interfaces</exec_depend>
  <exec_depend>amr_vision</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
