<?xml version="1.0"?>
<package format="3">
  <name>amr_interfaces</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 interfaces for the ROS2_Prac AMR portfolio project.</description>
  <maintainer email="bong7233@example.com">bong7233</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

