<?xml version="1.0"?>
<package format="3">
  <name>amr_operator_ui</name>
  <version>0.1.0</version>
  <description>Qt operator console for the ROS2_Prac AMR stack.</description>
  <maintainer email="bong7233@example.com">bong7233</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qt6-base-dev</build_depend>

  <depend>amr_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>libqt6-widgets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
