<?xml version="1.0"?>
<package format="3">
  <name>amr_sim</name>
  <version>0.1.0</version>
  <description>Gazebo simulation launch files and bridge configuration for ROS2_Prac.</description>
  <maintainer email="bong7233@example.com">bong7233</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>amr_bringup</exec_depend>
  <exec_depend>amr_battery_driver</exec_depend>
  <exec_depend>amr_description</exec_depend>
  <exec_depend>amr_io_driver</exec_depend>
  <exec_depend>amr_motor_driver</exec_depend>
  <exec_depend>amr_safety_monitor</exec_depend>
  <exec_depend>amr_system_manager</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
